Bring back quality colors before dark mode fixes
Apparently some of community members didn't like the new Codex
colorings happened in I30dcfb339d599ce5b3d8a3a43279270c21b0cfde
so let's revert it for now till the introduction of new colors.

Also applies a fixed black text color to the quality markers so
that without turning the colors to Codex colors the text can be
still readable on the dark mode.

Bug: T375114

--- a/modules/ext.proofreadpage.base.less
+++ b/modules/ext.proofreadpage.base.less
@@ -4,28 +4,33 @@
 
 /* stylelint-disable selector-class-pattern */
 .quality4 {
-	background-color: @background-color-success-subtle;
-	border-color: @background-color-success-subtle;
+	background-color: #90ff90;
+	border-color: #90ff90;
+	color: #202122;
 }
 
 .quality3 {
-	background-color: @background-color-warning-subtle;
-	border-color: @background-color-warning-subtle;
+	background-color: #ffe867;
+	border-color: #ffe867;
+	color: #202122;
 }
 
 .quality2 {
-	background-color: @background-color-progressive-subtle;
-	border-color: @background-color-progressive-subtle;
+	background-color: #b0b0ff;
+	border-color: #b0b0ff;
+	color: #202122;
 }
 
 .quality1 {
-	background-color: @background-color-error-subtle;
-	border-color: @background-color-error-subtle;
+	background-color: #ffa0a0;
+	border-color: #ffa0a0;
+	color: #202122;
 }
 
 .quality0 {
-	background-color: @background-color-notice-subtle;
-	border-color: @background-color-notice-subtle;
+	background-color: #ddd;
+	border-color: #ddd;
+	color: #202122;
 }
 
 .pr_quality {
